syntax = "proto3";

// имя пакета, в результирующем go-файле это сохраниться
package rpc_news;

option go_package = "../model";




message ShortNew {
    // номер записи
    int64 ID = 1;
    // заголовок публикации
 	string Title =2 ;
     string  Content =3 ;   // содержание публикации
     int64 PubTime  = 4;           // время публикации
     string Link  = 5;        // ссылка на источник
     int64 Hash = 6 ;  //Хеш  новости
}

message FullNew{
   ShortNew  News =1;  
   map  <int64,Comment>  Commments = 2;
}

message Forlist {
   int64 id = 1 ; 
}

message Page{
    int64 page  =1;
    int64 limit =2;
}
message Id{
    int64 page =1;
}

 message ArrayShortNews{ 
    int64  CountPage =1;    
    repeated ShortNew array = 2;
     
} 

message Result {
     int64 ret = 1;
     repeated string error =2;
}
// Вспомогательные структуры
enum OrderSORT {
    SORT_DESC = 0;
    SORT_ASC = 1;    
  }
enum FIELD_SORT{
    FIELD_ID =0;
    FIELD_TITLE =1;
    FIELD_DESC = 2;
    FIELD_DATE = 3;
    FIELD_URL = 4;
}

enum OptionSearch {    
    WholeWord = 0;
    WordPart = 1;    
    WordExclude =2;
    WordPartExclude = 3;
}

message optionSort{
    FIELD_SORT field = 1;
    OrderSORT  sort =2;
}

message FindWord{
    string search =1;
    OptionSearch option = 2;
}

message FilterDate{
    int64 startdate =1;
    int64 enddate =2;
}

message Filter {
    FindWord word =1;
    optionSort sort =2;
    FilterDate period =3;
}

service RssService {
    // add news  
    rpc AddNews(stream  ShortNew )returns (Result) {}
    //list news
    rpc List(Forlist) returns (ArrayShortNews) {}       //вернуть список последних новостей  для веб-интефейса
    rpc ListPage(Page) returns (ArrayShortNews) {}      //вернуть  список новостей на странице 
    rpc GetNews (Forlist) returns (ShortNew) {}         //детальная новость 
    rpc Search  (Filter) returns (ArrayShortNews) {}    //поиск по фильтру  
 }

 message Comment{    
    optional int64 id =1;    
    optional int64    parent = 2;
    string   content   = 3;
     int64   idnews   = 4;
    int64    authorid  = 5; 
    reserved  "unknown"; //string    Author   = 5 ;
    int64     time  =7 ;    
    map  <int64,Comment>  child = 8; 
    }

/* message branchComment{
    Comment Parrent  = 1;
    repeated Comment Child = 2;
} */

message TreeComments{   
    map  <int64,Comment>  comments = 2;
}

service CommentService {
    // add comment 
    rpc AddComment(Comment)returns (Result) {}
    rpc DelComment(Forlist)returns (Result) {}
    //return tree comment for id news
    rpc TreeComment(Forlist) returns (TreeComments) {}       //вернуть дерево  комментариев
   
 }
    
 